Aside margin adjusted

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -32,6 +32,7 @@
 
     <!--Main Section-->
     <div class="content">
+        <nav>
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt:"Search Engine" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -53,6 +54,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
+        </nav>
     </div>
 
     <!-- Right section of the page-->
