--- a/Develop/index.html
+++ b/Develop/index.html
@@ -7,37 +7,29 @@
     <title>Horisoen SEO Project</title>
 </head>
 
-<!-- Company Name-->
+<!-- Company Name and Header-->
 
 <body>
-    <div class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <nav>
-                <ul>
-                    <li>
-                        <a href="https://www.google.com" target="_blank">Search Engine Optimization</a>
-                    </li>
-                    <li>
-                        <a href="https://neilpatel.com/blog/guide-to-reputation-management/" target="_blank">Online
-                            Reputation Management</a>
-                    </li>
-                    <li>
-                        <a href="https://sproutsocial.com/insights/social-media-marketing-strategy/"
-                            target="_blank">Social Media Marketing</a>
-                    </li>
-                </ul>
+                <a href="https://www.google.com" target="_blank">Search Engine Optimization</a>
+                <a href="https://neilpatel.com/blog/guide-to-reputation-management/" target="_blank">Online
+                 Reputation Management</a>
+                <a href="https://sproutsocial.com/insights/social-media-marketing-strategy/"
+                target="_blank">Social Media Marketing</a>
             </nav>
         </div>
-    </div>
+    </header>
 
+    
     <!-- Page Image-->
     <div class="hero"></div>
 
     <!--Main Section-->
     <section id="content">
-        <article>
-            <div class="search-engine-optimization">
+            <article class="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" alt:"Search Engine" class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
@@ -45,8 +37,8 @@
                     travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
                     your visibility and find the right customers for your business.
                 </p>
-            </div>
-            <div class="online-reputation-management">
+            </article>
+            <article class="online-reputation-management">
                 <img src="./assets/images/online-reputation-management.jpg" alt:"Search Engine" class="float-right" />
                 <h2>Online Reputation Management</h2>
                 <p>
@@ -54,8 +46,8 @@
                     internet connection to say whatever they want about your business. Online Reputation Management
                     gives you the control over what potential customers see when they search for your business.
                 </p>
-            </div>
-            <div class="social-media-marketing">
+            </article>
+            <article class="social-media-marketing">
                 <img src="./assets/images/social-media-marketing.jpg" alt:"Search Engine" class="float-left" />
                 <h2>Social Media Marketing</h2>
                 <p>
@@ -63,8 +55,7 @@
                     you determine which platforms are suited to your brand, using analytics to find the right markets
                     and increase your lead generation.
                 </p>
-            </div>
-        </article>
+            </article>
     </section>
 
     <!-- Right section of the page-->
@@ -99,12 +90,12 @@
     </aside>
 
     <!--Commenting out Page Footer
-    <div class="footer">
+    <footer>
         <h4>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>-->
+    <footer>-->
 
 </body>
 
