Updated sematics and css positioning

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -12,24 +12,19 @@
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
             <nav>
-                <a href="https://www.google.com" target="_blank">Search Engine Optimization</a>
-                <a href="https://neilpatel.com/blog/guide-to-reputation-management/" target="_blank">Online
-                 Reputation Management</a>
-                <a href="https://sproutsocial.com/insights/social-media-marketing-strategy/"
-                target="_blank">Social Media Marketing</a>
+                <a href="#search-engine-optimization">Search Engine Optimization</a>
+                <a href="#online-reputation-management">Online Reputation Management</a>
+                <a href="#social-media-marketing">Social Media Marketing</a>
             </nav>
-        </div>
     </header>
-
-    
+  
     <!-- Page Image-->
     <div class="hero"></div>
 
     <!--Main Section-->
     <section id="content">
-            <article class="search-engine-optimization">
+            <article id="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" alt:"Search Engine" class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
@@ -38,7 +33,7 @@
                     your visibility and find the right customers for your business.
                 </p>
             </article>
-            <article class="online-reputation-management">
+            <article id="online-reputation-management">
                 <img src="./assets/images/online-reputation-management.jpg" alt:"Search Engine" class="float-right" />
                 <h2>Online Reputation Management</h2>
                 <p>
@@ -47,7 +42,7 @@
                     gives you the control over what potential customers see when they search for your business.
                 </p>
             </article>
-            <article class="social-media-marketing">
+            <article id="social-media-marketing">
                 <img src="./assets/images/social-media-marketing.jpg" alt:"Search Engine" class="float-left" />
                 <h2>Social Media Marketing</h2>
                 <p>
@@ -60,8 +55,7 @@
 
     <!-- Right section of the page-->
 
-    <aside>
-        <section>
+    <aside class="benefit">
             <div class="benefit-lead">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" alt:"Lead" />
@@ -86,16 +80,15 @@
                     longer need to advertise your page.
                 </p>
             </div>
-        </section>
     </aside>
 
     <!--Commenting out Page Footer
-    <footer>
+    <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    <footer>-->
+    </footer>-->
 
 </body>
 
