Updated Index and css

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -20,10 +20,10 @@
     </header>
   
     <!-- Page Image-->
-    <div class="hero"></div>
+    <section id="hero"></section>
 
     <!--Main Section-->
-    <section id="content">
+    <Article id="content">
             <article id="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" alt:"Search Engine" class="float-left" />
                 <h2>Search Engine Optimization</h2>
@@ -51,7 +51,7 @@
                     and increase your lead generation.
                 </p>
             </article>
-    </section>
+     </article>
 
     <!-- Right section of the page-->
 
