--- a/Develop/index.html
+++ b/Develop/index.html
@@ -23,8 +23,8 @@
     <section id="hero"></section>
 
     <!--Main Section-->
-    <Article id="content">
-            <article id="search-engine-optimization">
+    <article class="content">
+            <div class="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" alt:"Search Engine" class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
@@ -32,8 +32,8 @@
                     travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
                     your visibility and find the right customers for your business.
                 </p>
-            </article>
-            <article id="online-reputation-management">
+            </div>
+            <div class="online-reputation-management">
                 <img src="./assets/images/online-reputation-management.jpg" alt:"Search Engine" class="float-right" />
                 <h2>Online Reputation Management</h2>
                 <p>
@@ -41,8 +41,8 @@
                     internet connection to say whatever they want about your business. Online Reputation Management
                     gives you the control over what potential customers see when they search for your business.
                 </p>
-            </article>
-            <article id="social-media-marketing">
+            </div>
+            <div class="social-media-marketing">
                 <img src="./assets/images/social-media-marketing.jpg" alt:"Search Engine" class="float-left" />
                 <h2>Social Media Marketing</h2>
                 <p>
@@ -50,7 +50,7 @@
                     you determine which platforms are suited to your brand, using analytics to find the right markets
                     and increase your lead generation.
                 </p>
-            </article>
+            </div>
      </article>
 
     <!-- Right section of the page-->
